# ai-dev-teaching-hub

./: .gitignore  Environnements_Python_venv_conda_uv.ipynb  README.md  pyproject.toml
Deep-Learning/: Alyra - classification_audio.ipynb  Alyra - intro_deep_learning_live (1).ipynb  Alyra-from-ML-to-DL.ipynb  OPT_Alyra_intro_DL.ipynb  install_tensorflow_gpu_v2.py  simple_ann.ipynb  simple_cnn.ipynb
Deep-Learning/Exercices/: Exercices-DL-01-CNN-basic.ipynb  Exercices-DL-02-CNN-avancé.ipynb  Exercices-DL-NLP-basic.ipynb
Deep-Learning/LIVE_1/: 1_Alyra-from-ML-to-DL.ipynb  3_simple_cnn.ipynb  4_Alyra_intro_deep_learning.ipynb
Deep-Learning/Live_1/: 2_simple_ann.ipynb
Deep-Learning/Live_2/: Alyra - RNN_LSTM_GRU_Series_Temporelles.ipynb  Alyra - autoencoders.ipynb  Alyra-Transformer_NLP_Generation_Texte_Francais.ipynb
MLOps/: README.md
MLOps/model-deployment/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  structure_projet.md  structure_projet.txt
MLOps/model-deployment/api/: main.py  schemas.py
MLOps/model-deployment/api/models/: image_model.py  text_model.py
MLOps/model-deployment/app/: main.py
MLOps/model-deployment/app/models/: image_model.py  text_model.py
MLOps/model-deployment/app/preprocess/: image.py
MLOps/model-deployment/front/: app.py
Machine-Learning/Evaluation/: Evaluation.ipynb  Evaluation_classification.ipynb  Evaluation_regression.ipynb
Machine-Learning/Exercices/: Execices_ML_end-to-end.ipynb  Execices_ML_preprocessing.ipynb  Exercices_overview_simple.ipynb
(+20 files in other folders)
