[project]
name = "ml-dl-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "tensorflow>=2.16",
    "transformers>=4.40",
    "torch>=2.2",
    "pillow>=10.0",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
